Fixes alignment of profilePic

--- a/_sass/_exegetic-layout.scss
+++ b/_sass/_exegetic-layout.scss
@@ -35,3 +35,13 @@ a:hover {
   }
 }
 
+#profilePic {
+  /*
+  moz-border-radius: 15px;
+  border-radius: 15px;
+  */
+  float:left;
+  clear: both;
+  margin: 0px 20px 0.5em 0;
+}
+
